--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -346,12 +346,6 @@
 }
 
 /* Settings editor cards */
-.settings-editor .settings-toc-container,
-.settings-editor .settings-tree-container {
-   background: #2a2834aa !important;
-   backdrop-filter: blur(var(--perfume-blur-sm)) !important;
-}
-
 .settings-editor .monaco-list-row.focused {
    background: twotoneBackground() !important;
 }
@@ -421,13 +415,16 @@ html body .monaco-editor .glyph-margin-widgets,
 .notifications-toasts .monaco-list-rows,
 .notifications-toasts .monaco-list-container {
    background: transparent !important;
-   border-radius: var(--perfume-radius-md) !important;
 }
 
 .notifications-toasts .monaco-list-row .notification-list-item {
-   border: 1px solid var(--perfume-border) !important;
+   @include glassBorder(var(--perfume-border), var(--perfume-radius-md));
 }
 
 .notifications-toasts .monaco-list-row:hover .notification-list-item {
    border-color: var(--perfume-accent) !important;
+}
+/* Border radius for Notifications */
+.monaco-workbench>.notifications-toasts .notifications-list-container, .monaco-workbench>.notifications-toasts .notification-toast-container>.notification-toast, .monaco-workbench>.notifications-toasts .notification-toast-container>.notification-toast .monaco-scrollable-element, .monaco-workbench>.notifications-toasts .notification-toast-container>.notification-toast .monaco-list:not(.element-focused):focus:before, .monaco-workbench>.notifications-toasts .notification-toast-container>.notification-toast .monaco-list-row {
+   border-radius: var(--perfume-radius-md) !important;
 }
